RESOLVED FIXED274737
[WebGPU] When creating bind groups, a buffer's binding offset is not considered in validation
https://bugs.webkit.org/show_bug.cgi?id=274737
Summary [WebGPU] When creating bind groups, a buffer's binding offset is not consider...
Mike Wyrzykowski
Reported 2024-05-26 16:57:09 PDT
[WebGPU] When creating bind groups, a buffer's binding offset is not considered in validation
Attachments
Mike Wyrzykowski
Comment 1 2024-05-26 16:58:05 PDT
Mike Wyrzykowski
Comment 2 2024-05-26 17:15:54 PDT
EWS
Comment 3 2024-05-29 14:31:22 PDT
Committed 279463@main (183fd57756fe): <https://commits.webkit.org/279463@main> Reviewed commits have been landed. Closing PR #29133 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.