[WebGPU] When creating bind groups, a buffer's binding offset is not considered in validation https://bugs.webkit.org/show_bug.cgi?id=274737 <radar://128610873>

Reviewed by Tadeu Zagallo.

Buffer's offset was not considered when performing range validation.

Correct validation and add regression test.

* LayoutTests/fast/webgpu/regression/repro_274737-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274737.html: Added.
* LayoutTests/fast/webgpu/regression/repro_274737b-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274737b.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):

Canonical link: https://commits.webkit.org/279463@main